add: devise, flash messages to layout, generate views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,13 @@
   </head>
 
   <body>
+    <%= link_to "Home", root_path %>
+
+    <% flash.each do |type, msg| %>
+      <div>
+        <p><%= msg %></p>
+      </div>
+    <% end %>
     <main class="container mx-auto mt-28 px-5 flex">
       <%= yield %>
     </main>
