can add user, can approve user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
         <p><%= msg %></p>
       </div>
     <% end %>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <main class="container mx-auto mt-28 px-5 ">
       <%= yield %>
     </main>
   </body>
