--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,4 +1,55 @@
-<div>
-  <h1 class="font-bold text-4xl">Admin::Users#index</h1>
-  <p>Find me in app/views/admin/users/index.html.erb</p>
+<div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+  <div class="flex items-center justify-between w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+    <div class="mx-5">
+      <%= form_with model: [@users ], url: admin_users_path, method: :get do |form| %>
+        <%= select_tag(:filter, options_for_select([["All"],["Pending"],["Approved"]], params[:filter] ), class:"select form-control
+                        btn btn-outline-dark" , onchange: "this.form.submit();" ) %>
+      <% end %>
+    </div>
+    <%= link_to "Add User",new_admin_user_path, class: "text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"%>
+  </div>
+  <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+    <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+      <tr>
+        <th scope="col" class="px-6 py-3">
+          Name
+        </th>
+        <th scope="col" class="px-6 py-3">
+          Email
+        </th>
+        <th scope="col" class="px-6 py-3">
+          Balance
+        </th>
+        <th scope="col" class="px-6 py-3">
+          Status
+        </th>
+        <th scope="col" class="px-6 py-3">
+          Action
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @users.map do |u| %>
+        <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700 border-gray-200">
+          <td class="px-6 py-4">
+            <%= u.name %>
+          </td>
+          <td class="px-6 py-4">
+            <%= u.email %>
+          </td>
+          <td class="px-6 py-4">
+            <%= u.balance %>
+          </td>
+          <td class="px-6 py-4">
+            <%= u.is_approved ? 'Approved':'Pending' %>
+          </td>
+          <td class="px-6 py-4">
+            <% if !u.is_approved %>
+              <%= button_to "Approved",approve_admin_user_path(u.id),method: :patch,class: "text-blue-500 hover:text-white border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-xs px-3 py-2 text-center me-2  dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-800" %>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
