--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,4 +1,4 @@
 <div>
-  <h1 class="font-bold text-4xl">Admin::Users#new</h1>
-  <p>Find me in app/views/admin/users/new.html.erb</p>
+  <%= link_to "Back",admin_users_path, class: "btn" %>
 </div>
+<%= render "form" , user: @user %>
