--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -2,3 +2,4 @@
   <h1 class="font-bold text-4xl">Admin::Users#edit</h1>
   <p>Find me in app/views/admin/users/edit.html.erb</p>
 </div>
+<%= render "form" , user: @user %>
