--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,10 +1,14 @@
 <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
   <div class="flex items-center justify-between w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-    <div class="mx-5">
-      <%= form_with model: [@users ], url: admin_users_path, method: :get do |form| %>
-        <%= select_tag(:filter, options_for_select([["All"],["Pending"],["Approved"]], params[:filter] ), class:"select form-control
-                        btn btn-outline-dark" , onchange: "this.form.submit();" ) %>
-      <% end %>
+    <div class="mx-5 flex">
+      <div class="mx-2">
+        <%= form_with model: [@users ], url: admin_users_path, method: :get do |form| %>
+          <%= select_tag(:filter, options_for_select([["All"],["Pending"],["Approved"]], params[:filter] ), class:"" , onchange: "this.form.submit();" ) %>
+        <% end %>
+      </div>
+      <div class="mx-2">
+        <%= link_to "Transactions", admin_transactions_path, class: "text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"%>
+      </div>
     </div>
     <%= link_to "Add User",new_admin_user_path, class: "text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"%>
   </div>
@@ -46,7 +50,7 @@
           <td class="px-6 py-4">
             <div class="flex">
               <% if !u.is_approved %>
-                <%= button_to "Approved",approve_admin_user_path(u.id),method: :patch,class: "text-blue-500 hover:text-white border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-xs px-3 py-2 text-center me-2  dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-800" %>
+                <%= button_to "Approved",approve_admin_user_path(u.id),method: :patch,class: "text-yellow-500 hover:text-white border border-yellow-700 hover:bg-yellow-800 focus:ring-4 focus:outline-none focus:ring-yellow-300 font-medium rounded-lg text-xs px-3 py-2 text-center me-2  dark:border-yellow-500 dark:text-yellow-500 dark:hover:text-white dark:hover:bg-yellow-500 dark:focus:ring-yellow-800" %>
               <% end %>
               <%= link_to "Edit",edit_admin_user_path(u), class:"text-blue-500 hover:text-white border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-xs px-3 py-2 text-center me-2  dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-800" %>
               <%= link_to "View",admin_user_path(u), class:"text-blue-500 hover:text-white border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-xs px-3 py-2 text-center me-2  dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-800" %>
