--- a/app/views/holdings/index.html.erb
+++ b/app/views/holdings/index.html.erb
@@ -1,22 +1,41 @@
-<h1>Your Holdings</h1>
-
-<table>
-    <thead>
-        <tr>
-            <th>Stock</th>
-            <th>Total Shares Owned</th>
-            <th>Average Buy Price</th>
-            <th>Total Value</th>
-        </tr>
-    </thead>
-    <tbody>
-        <% @holdings.each do |holding| %>
+<h1 class="font-semibold text-2xl mb-4">Your Holdings</h1>
+<div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:text-gray-400 dark:bg-gray-700">
             <tr>
-                <td><%= holding.stock_name %></td>
-                <td><%= holding.total_shares_owned %></td>
-                <td><%= holding.average_buy_price %></td>
-                <td><%= holding.total_value %></td>
+                <th scope="col" class="px-6 py-3">
+                    Stock
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Total Shares Owned
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Average Buy Price
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Total Value
+                </th>
             </tr>
-        <% end %>
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            <% @holdings.each do |holding| %>
+                <tr class="border-b border-gray-200 odd:bg-white odd:dark:bg-gray-900  even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600">
+                    <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-gray-300">
+                        <%= holding.stock_name %>
+                    </th>
+                    <td class="px-6 py-4">
+                        <%= holding.total_shares_owned %>
+                    </td>
+                    <td class="px-6 py-4">
+                        <%= holding.average_buy_price %>
+                    </td>
+                    <td class="px-6 py-4">
+                        <%= holding.total_value %>
+                    </td>
+                </tr>
+            <% end %>
+        </tbody>
+    </table>
+</div>
+
+
