--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,8 +48,8 @@
       </div>
     </nav>
     <% flash.each do |type, msg| %>
-      <div>
-        <p><%= msg %></p>
+      <div id="toast-bottom-right" class="fixed flex items-center w-full max-w-xs p-4 space-x-4 text-gray-500 bg-white divide-x rtl:divide-x-reverse divide-gray-200 rounded-lg shadow-sm right-5 bottom-5 dark:text-gray-400 dark:divide-gray-700 dark:bg-gray-800" role="alert">
+        <div class="text-sm font-normal"><%= msg %></div>
       </div>
     <% end %>
     <main class="container mx-auto mt-28 px-5 ">
