--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,26 +1,56 @@
-<h1>Transaction History</h1>
-
-<table>
-    <thead>
-        <tr>
-            <th>Stock</th>
-            <th>Quantity</th>
-            <th>Stock Price Per Share</th>
-            <th>Total Price</th>
-            <th>Transaction Type</th>
-            <th>Transaction Date</th>
-        </tr>
-    <tbody>
-        <% @transactions.each do |t| %>
+<h1 class="font-semibold text-2xl mb-4">Transaction History</h1>
+<div class="mx-2">
+    <%= form_with url: transactions_path, method: :get, local: true do %>
+        <%= select_tag :symbol, options_for_select(["All"] + @user_stock_names, params[:symbol]), onchange: "this.form.submit();" %>
+    <% end %>
+</div>
+<div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:text-gray-400 dark:bg-gray-700">
             <tr>
-                <td><%= t.stock_name %></td>
-                <td><%= t.quantity %></td>
-                <td><%= t.stock_price_per_share %></td>
-                <td><%= t.total_price %></td>
-                <td><%= t.transaction_type %></td>
-                <td><%= t.created_at.strftime("%Y-%m-%d") %></td>
+                <th scope="col" class="px-6 py-3">
+                    Stock
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Quantity
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Stock Price Per Share
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Total Price
+                </th>
+                 <th scope="col" class="px-6 py-3">
+                    Transaction Type
+                </th>
+                 <th scope="col" class="px-6 py-3">
+                    Transaction Date
+                </th>
             </tr>
-        <% end %>
-    </tbody>
-</table>
-
+        </thead>
+        <tbody>
+            <% @transactions.each do |t| %>
+                <tr class="border-b border-gray-200 odd:bg-white odd:dark:bg-gray-900  even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600">
+                    <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-gray-300">
+                        <%= t.stock_name %>
+                    </th>
+                    <td class="px-6 py-4">
+                        <%= t.quantity %>
+                    </td>
+                    <td class="px-6 py-4">
+                        <%= t.stock_price_per_share %>
+                    </td>
+                    <td class="px-6 py-4">
+                        <%= t.total_price %>
+                    </td>
+                    <td class="px-6 py-4 <%= 'text-rose-500' if t.transaction_type == 'Sell' %> <%= 'text-emerald-500' if t.transaction_type == 'Buy' %>">
+                        <%= t.transaction_type %>
+                    </td>
+                    <td class="px-6 py-4">
+                        <%= t.created_at.strftime("%Y-%m-%d") %>
+                    </td>
+                </tr>
+            <% end %>
+        </tbody>
+    </table>
+</div>
