--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,31 +1,72 @@
-<h2>Sign up</h2>
-<div>
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
-    <div class="field">
-      <%= f.label :name %><br />
-      <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+<div class="signup_div">
+  <div class="signup_img">
+  </div>
+  <div class="signup_form">
+    <h1 style="margin-bottom:5px;">SIGN UP</h1>
+    <div>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        <div class="field">
+          <%= f.label :name %>
+          <%= f.text_field :name, autofocus: true, autocomplete: "name",style: "border: 1px solid white;border-radius:5px;",class: "input" %>
+        </div>
+        <div class="field">
+          <%= f.label :email %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email",style: "border: 1px solid white;border-radius:5px;",class: "input"  %>
+        </div>
+        <div class="field">
+          <%= f.label :password %>
+          <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %>
+          <%= f.password_field :password, autocomplete: "new-password" ,style: "border: 1px solid white;border-radius:5px;",class: "input" %>
+        </div>
+        <div class="field">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password" ,style: "border: 1px solid white;border-radius:5px;",class: "input" %>
+        </div>
+        <div class="actions">
+          <%= f.submit "Sign up", class:"" %>
+        </div>
+      <% end %>
     </div>
-    <div class="field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-    </div>
-    <div class="field">
-      <%= f.label :password %>
-      <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password" %>
-    </div>
-    <div class="field">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-    </div>
-    <div class="actions">
-      <%= f.submit "Sign up" %>
-    </div>
-  <% end %>
+    <%= render "devise/shared/links" %>
+  </div>
 </div>
-<div>
-  <%= render "devise/shared/links" %>
-</div>
+<style>
+  .input{
+   width: 100%;
+   padding: 8px 10px;
+   margin: 3px 0;
+   display: inline-block;
+   border: 1px solid #ccc;
+   border-radius: 4px;
+   box-sizing: border-box;
+   }
+   input[type="submit"] {
+   width: 100%;
+   background-color: rgb(20, 131, 146);
+   color: white;
+   padding: 10px 10px;
+   margin: 3px 0;
+   border: none;
+   border-radius: 4px;
+   cursor: pointer;
+   }
+   input[type="submit"]:hover {
+   background-color: rgb(25, 164, 182);
+   }
+   .login_btn {
+   background-color: rgb(25, 182, 25);
+   width: 100%;
+   color: white;
+   padding: 10px 10px;
+   margin: 3px 0;
+   border: none;
+   border-radius: 4px;
+   cursor: pointer;
+   }
+   div {
+   border-radius: 5px;
+   }
+</style>
