--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -5,8 +5,8 @@
     <% end %>
 </div>
 <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:text-gray-400 dark:bg-gray-700">
+    <table class="w-full text-sm text-left rtl:text-right text-gray-500">
+        <thead class="text-xs text-gray-200 uppercase bg-indigo-950">
             <tr>
                 <th scope="col" class="px-6 py-3">
                     Stock
@@ -30,8 +30,8 @@
         </thead>
         <tbody>
             <% @transactions.each do |t| %>
-                <tr class="border-b border-gray-200 odd:bg-white odd:dark:bg-gray-900  even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600">
-                    <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-gray-300">
+                <tr class="border-b border-violet-950 text-gray-200 odd:bg-indigo-900 even:bg-gray-800 hover:bg-gray-50 hover:text-gray-900">
+                    <th scope="row" class="px-6 py-4 font-medium whitespace-nowrap">
                         <%= t.stock_name %>
                     </th>
                     <td class="px-6 py-4">
